rename folders and update collate

--- a/collated/main/A0139154E.md
+++ b/collated/main/A0139154E.md
@@ -70,7 +70,7 @@ public class ListTodayCommand extends Command {
                 }
             }
 
-            return (isTaskDueToday || isEventDueToday);
+            return ((isTaskDueToday || isEventDueToday) && !task.getIsCompleted());
         }
 
         @Override
