--- a/collated/main/A0139926R.md
+++ b/collated/main/A0139926R.md
@@ -124,7 +124,7 @@ public class EditCommand extends Command {
             } else {
                 List<Date> startDate = DateParser.parse(editedTask.getDate().value);
                 List<Date> endDate = DateParser.parse(editedTask.getEndDate().value);
-                if (!DateParser.checkValidSchedule(startDate, endDate)) {
+                if (!DateParser.isValidSchedule(startDate, endDate)) {
                     return new CommandResult(MESSAGE_INVALID_DATE);
                 }
             }
@@ -408,66 +408,78 @@ public class AddCommandParser {
     }
     private Command getCorrectAddCommand(ArgumentTokenizer argsTokenizer, int taskType) throws IllegalValueException {
         if (taskType == eventTask) {
-            List<Date> startDate = DateParser.getDate(argsTokenizer.getValue(PREFIX_START_DATE).get());
-            List<Date> endDate = DateParser.getDate(argsTokenizer.getValue(PREFIX_END_DATE).get());
-            String priority = "Low";
-            if (!DateParser.checkValidDateFormat(startDate)) {
-                return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_START_DATE));
-            }
-            if (!DateParser.checkValidDateFormat(endDate)) {
-                return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_END_DATE));
-            }
-            if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
-                priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
-            }
-            if (DateParser.checkValidSchedule(startDate, endDate)) {
-                return new AddCommand(
-                        argsTokenizer.getPreamble().get(),
-                        DateParser.getDateString(startDate),
-                        DateParser.getDateString(endDate), priority
-                        );
-            } else {
-                return new IncorrectCommand(String.format(MESSAGE_INVALID_START_AND_END_DATE));
-            }
+            return getCommandForEventTask(argsTokenizer);
         } else if (taskType == deadlineTaskWithDate) {
-            List<Date> deadline = DateParser.getDate(argsTokenizer.getValue(PREFIX_DATE).get());
-            String priority = "Low";
-            if (!DateParser.checkValidDateFormat(deadline)) {
-                return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_DATE));
-            }
-            if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
-                priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
-            }
-            if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
-                priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
-            }
-            return new AddCommand(
-                    argsTokenizer.getPreamble().get(),
-                    DateParser.getDateString(deadline), priority
-                    );
+            return getCommandForDeadlineWithDate(argsTokenizer);
         } else if (taskType == deadlineTaskWithTime) {
-            List<Date> deadline = DateParser.getDate(argsTokenizer.getValue(PREFIX_TIME).get());
-            String priority = "Low";
-            if (!DateParser.checkValidDateFormat(deadline)) {
-                return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_DATE));
-            }
-            if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
-                priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
-            }
-            return new AddCommand(
-                    argsTokenizer.getPreamble().get(),
-                    DateParser.getDateString(deadline), priority
-                    );
+            return getCommandForDeadlineWithTime(argsTokenizer);
         } else if (taskType == invalidEvent) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
         } else {
-            String priority = "Low";
-            if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
-                priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
-            }
+            return getCommandForFloatingTask(argsTokenizer);
+        }
+    }
+    private Command getCommandForFloatingTask(ArgumentTokenizer argsTokenizer) throws IllegalValueException {
+        String priority = "Low";
+        if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
+            priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
+        }
+        return new AddCommand(
+                argsTokenizer.getPreamble().get(), priority
+                );
+    }
+    private Command getCommandForDeadlineWithTime(ArgumentTokenizer argsTokenizer) throws IllegalValueException {
+        List<Date> deadline = DateParser.getDate(argsTokenizer.getValue(PREFIX_TIME).get());
+        String priority = "Low";
+        if (!DateParser.isValidDateFormat(deadline)) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_DATE));
+        }
+        if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
+            priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
+        }
+        return new AddCommand(
+                argsTokenizer.getPreamble().get(),
+                DateParser.getDateString(deadline), priority
+                );
+    }
+    private Command getCommandForDeadlineWithDate(ArgumentTokenizer argsTokenizer) throws IllegalValueException {
+        List<Date> deadline = DateParser.getDate(argsTokenizer.getValue(PREFIX_DATE).get());
+        String priority = "Low";
+        if (!DateParser.isValidDateFormat(deadline)) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_DATE));
+        }
+        if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
+            priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
+        }
+        if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
+            priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
+        }
+        return new AddCommand(
+                argsTokenizer.getPreamble().get(),
+                DateParser.getDateString(deadline), priority
+                );
+    }
+    private Command getCommandForEventTask(ArgumentTokenizer argsTokenizer) throws IllegalValueException {
+        List<Date> startDate = DateParser.getDate(argsTokenizer.getValue(PREFIX_START_DATE).get());
+        List<Date> endDate = DateParser.getDate(argsTokenizer.getValue(PREFIX_END_DATE).get());
+        String priority = "Low";
+        if (!DateParser.isValidDateFormat(startDate)) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_START_DATE));
+        }
+        if (!DateParser.isValidDateFormat(endDate)) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_DATE_FORMAT_FOR_END_DATE));
+        }
+        if (argsTokenizer.getValue(PREFIX_PRIORITY).isPresent())  {
+            priority = argsTokenizer.getValue(PREFIX_PRIORITY).get();
+        }
+        if (DateParser.isValidSchedule(startDate, endDate)) {
             return new AddCommand(
-                    argsTokenizer.getPreamble().get(), priority
+                    argsTokenizer.getPreamble().get(),
+                    DateParser.getDateString(startDate),
+                    DateParser.getDateString(endDate), priority
                     );
+        } else {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_START_AND_END_DATE));
         }
     }
 ```
@@ -506,14 +518,6 @@ public class CliSyntax {
     public static final Prefix PREFIX_TIME = new Prefix("@");
     public static final Prefix PREFIX_START_DATE = new Prefix("from:");
     public static final Prefix PREFIX_END_DATE = new Prefix("to:");
-    public static final Prefix PREFIX_PRIORITY = new Prefix("p/");
-
-
-    /* Patterns definitions */
-    public static final Pattern KEYWORDS_ARGS_FORMAT =
-            Pattern.compile("(?<keywords>\\S+(?:\\s+\\S+)*)"); // one or more keywords separated by whitespace
-
-}
 ```
 ###### \java\typetask\logic\parser\DateParser.java
 ``` java
@@ -616,12 +620,12 @@ public class DateParser {
      * Checks only if there is a startDate and endDate
      * @return true if endDate is not before startDate, otherwise false
      */
-    public static boolean checkValidSchedule(List<Date> startDate, List<Date> endDate) {
+    public static boolean isValidSchedule(List<Date> startDate, List<Date> endDate) {
         boolean isValidDate = false;
         if (!startDate.isEmpty() && !endDate.isEmpty()) {
             Date sDate = startDate.get(dateFromUser);
             Date eDate = endDate.get(dateFromUser);
-            isValidDate = checkValidEventDate(sDate, eDate);
+            isValidDate = isValidEventDate(sDate, eDate);
         }
         return isValidDate;
     }
@@ -629,7 +633,7 @@ public class DateParser {
      * Compares @param startDate and @param endDate
      * @return true if endDate is not before startDate, otherwise false
      */
-    public static boolean checkValidEventDate(Date startDate, Date endDate) {
+    public static boolean isValidEventDate(Date startDate, Date endDate) {
         boolean isValidDate = false;
         if (startDate.before(endDate)) {
             isValidDate = true;
@@ -640,7 +644,7 @@ public class DateParser {
      * Checks @param date if the list of dates is empty or not
      * @return true if there is a date in the list
      */
-    public static boolean checkValidDateFormat(List<Date> date) {
+    public static boolean isValidDateFormat(List<Date> date) {
         boolean isValidDate = false;
         if (!date.isEmpty()) {
             isValidDate = true;
@@ -679,6 +683,11 @@ public class EditCommandParser {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
         }
 
+        return updateEditTaskDescriptor(argsTokenizer, preambleFields, index);
+    }
+
+    private Command updateEditTaskDescriptor(ArgumentTokenizer argsTokenizer, List<Optional<String>> preambleFields,
+            Optional<Integer> index) {
         EditTaskDescriptor editTaskDescriptor = new EditTaskDescriptor();
         List<Date> endDateList;
         List<Date> startDateList;
@@ -689,49 +698,41 @@ public class EditCommandParser {
             //Checks for valid deadline. If valid, store new deadline for editing
             if (argsTokenizer.getValue(PREFIX_DATE).isPresent()) {
                 dateList = DateParser.parse(argsTokenizer.getValue(PREFIX_DATE).get());
-                if (!DateParser.checkValidDateFormat(dateList)) {
+                if (!DateParser.isValidDateFormat(dateList)) {
                     return new IncorrectCommand(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_DATE);
                 }
-                Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_DATE).get()));
-                Optional<String> emptyString = Optional.of("");
-                editTaskDescriptor.setEndDate(ParserUtil.parseDate(parseDate));
-                editTaskDescriptor.setDate(ParserUtil.parseDate(emptyString));
+                setDeadlineWithDate(argsTokenizer, editTaskDescriptor);
             }
             //Checks for valid deadline. If valid, store new deadline for editing
             if (argsTokenizer.getValue(PREFIX_TIME).isPresent()) {
                 timeList = DateParser.parse(argsTokenizer.getValue(PREFIX_TIME).get());
-                if (!DateParser.checkValidDateFormat(timeList)) {
+                if (!DateParser.isValidDateFormat(timeList)) {
                     return new IncorrectCommand(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_DATE);
                 }
-                Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_TIME).get()));
-                Optional<String> emptyString = Optional.of("");
-                editTaskDescriptor.setEndDate(ParserUtil.parseDate(parseDate));
-                editTaskDescriptor.setDate(ParserUtil.parseDate(emptyString));
+                setDeadlineWithTime(argsTokenizer, editTaskDescriptor);
             }
             //Checks for valid start date. If valid, store new start date for editing
             if (argsTokenizer.getValue(PREFIX_START_DATE).isPresent()) {
                 startDateList = DateParser.parse(argsTokenizer.getValue(PREFIX_START_DATE).get());
-                if (!DateParser.checkValidDateFormat(startDateList)) {
+                if (!DateParser.isValidDateFormat(startDateList)) {
                     return new IncorrectCommand(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_START_DATE);
                 }
-                Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_START_DATE).get()));
-                editTaskDescriptor.setDate(ParserUtil.parseDate(parseDate));
+                setStartDate(argsTokenizer, editTaskDescriptor);
             }
             //Checks for valid end date. If valid, store new end date for editing
             if (argsTokenizer.getValue(PREFIX_END_DATE).isPresent()) {
                 endDateList = DateParser.parse(argsTokenizer.getValue(PREFIX_END_DATE).get());
-                if (!DateParser.checkValidDateFormat(endDateList)) {
+                if (!DateParser.isValidDateFormat(endDateList)) {
                     return new IncorrectCommand(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_END_DATE);
                 }
-                Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_END_DATE).get()));
-                editTaskDescriptor.setEndDate(ParserUtil.parseDate(parseDate));
+                setEndDate(argsTokenizer, editTaskDescriptor);
             }
             //Checks for valid schedule
             if (argsTokenizer.getValue(PREFIX_START_DATE).isPresent() &&
                     argsTokenizer.getValue(PREFIX_END_DATE).isPresent()) {
                 startDateList = DateParser.parse(argsTokenizer.getValue(PREFIX_START_DATE).get());
                 endDateList = DateParser.parse(argsTokenizer.getValue(PREFIX_END_DATE).get());
-                if (!DateParser.checkValidSchedule(startDateList, endDateList)) {
+                if (!DateParser.isValidSchedule(startDateList, endDateList)) {
                     return new IncorrectCommand(Messages.MESSAGE_INVALID_START_AND_END_DATE);
                 }
             }
@@ -747,6 +748,34 @@ public class EditCommandParser {
         }
 
         return new EditCommand(index.get(), editTaskDescriptor);
+    }
+
+    private void setEndDate(ArgumentTokenizer argsTokenizer, EditTaskDescriptor editTaskDescriptor)
+            throws IllegalValueException {
+        Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_END_DATE).get()));
+        editTaskDescriptor.setEndDate(ParserUtil.parseDate(parseDate));
+    }
+
+    private void setStartDate(ArgumentTokenizer argsTokenizer, EditTaskDescriptor editTaskDescriptor)
+            throws IllegalValueException {
+        Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_START_DATE).get()));
+        editTaskDescriptor.setDate(ParserUtil.parseDate(parseDate));
+    }
+
+    private void setDeadlineWithTime(ArgumentTokenizer argsTokenizer, EditTaskDescriptor editTaskDescriptor)
+            throws IllegalValueException {
+        Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_TIME).get()));
+        Optional<String> emptyString = Optional.of("");
+        editTaskDescriptor.setEndDate(ParserUtil.parseDate(parseDate));
+        editTaskDescriptor.setDate(ParserUtil.parseDate(emptyString));
+    }
+
+    private void setDeadlineWithDate(ArgumentTokenizer argsTokenizer, EditTaskDescriptor editTaskDescriptor)
+            throws IllegalValueException {
+        Optional<String> parseDate = Optional.of(getDate(argsTokenizer.getValue(PREFIX_DATE).get()));
+        Optional<String> emptyString = Optional.of("");
+        editTaskDescriptor.setEndDate(ParserUtil.parseDate(parseDate));
+        editTaskDescriptor.setDate(ParserUtil.parseDate(emptyString));
     }
 
 ```
@@ -784,7 +813,7 @@ public class FindCommandParser {
         //checks if keyword contains potential dates
         List<Date> listOfDates = DateParser.parse(args);
         String wantedDate = "";
-        if (DateParser.checkValidDateFormat(listOfDates)) {
+        if (DateParser.isValidDateFormat(listOfDates)) {
             wantedDate = DateParser.getDateString(listOfDates);
         }
 
@@ -1075,7 +1104,7 @@ public class UndoCommandParser {
                     if (keywordDate.before(taskEndDate) && keywordDate.after(taskStartDate)) {
                         result = true;
                     }
-                    if (keywordDate.equals(taskStartDate)) {
+                    if (keywordDate.equals(taskStartDate) || keywordDate.equals(taskEndDate)) {
                         result = true;
                     }
                 }
@@ -1135,23 +1164,6 @@ public class DueDate {
         this.name = name;
         this.date = date;
         this.endDate = endDate;
-        this.isCompleted = isCompleted;
-        this.priority = priority;
-    }
-
-    /**
-     * Creates a copy of the given ReadOnlyTask.
-     */
-    public Task(ReadOnlyTask source) {
-       this(source.getName(), source.getDate(), source.getEndDate(),
-              source.getIsCompleted(), source.getPriority());
-    }
-
-    public void setName(Name name) {
-        assert name != null;
-        this.name = name;
-    }
-
 ```
 ###### \java\typetask\model\task\Task.java
 ``` java
@@ -1220,15 +1232,6 @@ public class DueDate {
         } else {
             endDate = "";
         }
-
-        priority = source.getPriority().value;
-        if (source.getPriority() != null) {
-            priority = source.getPriority().value;
-        } else {
-            priority = "Low";
-        }
-        isCompleted = source.getIsCompleted();
-    }
 ```
 ###### \java\typetask\storage\XmlAdaptedTask.java
 ``` java
@@ -1241,14 +1244,6 @@ public class DueDate {
         final Name name = new Name(this.name);
         final DueDate date = new DueDate(this.date);
         final DueDate endDate = new DueDate(this.endDate);
-        final Priority priority = new Priority(this.priority);
-        boolean isCompleted = false;
-        if (this.isCompleted != null) {
-            isCompleted = this.isCompleted;
-        }
-        return new Task(name, date, endDate, isCompleted, priority);
-    }
-}
 ```
 ###### \java\typetask\ui\TaskCard.java
 ``` java
@@ -1268,9 +1263,9 @@ public class DueDate {
             } else {
                 setStyleToIndicatePending();
             }
-            if (task.getIsCompleted()) {
-                setStyleToIndicateCompleted(task);
-            }
+        }
+        if (task.getIsCompleted()) {
+            setStyleToIndicateCompleted(task);
         }
     }
 
