--- a/collated/test/A0139926R.md
+++ b/collated/test/A0139926R.md
@@ -27,56 +27,56 @@ public class AddCommandTest extends TypeTaskGuiTest {
     }
 
     @Test
-    public void addInvalidEvent_fail() {
+    public void add_invalidEvent_fail() {
         commandBox.runCommand("a invalidEvent from: today");
         assertResultMessage(String.format
                 (Messages.MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
     }
     @Test
-    public void addInvalidMultiplePrefix_fail() {
+    public void add_invalidMultiplePrefix_fail() {
         commandBox.runCommand("+ invalidEvent by: today @tmr");
         assertResultMessage(String.format
                 (Messages.MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
     }
     @Test
-    public void addTask_success() throws IllegalValueException {
+    public void add_validTask_success() throws IllegalValueException {
         commandBox.runCommand("add success p/Low");
         TestTask expectedResult = new TaskBuilder().withName("success")
                 .withDate("").withEndDate("").withCompleted(false).withPriority("Low").build();
         assertResultMessage(String.format(AddCommand.MESSAGE_SUCCESS, expectedResult));
     }
     @Test
-    public void addTaskWithInvalidName_fail() {
+    public void add_taskWithInvalidName_fail() {
         commandBox.runCommand("add ^_^");
         assertResultMessage(Name.MESSAGE_NAME_CONSTRAINTS);
     }
     @Test
-    public void addTaskWithEndDateBeforeStartDate_fail() {
+    public void add_taskWithEndDateBeforeStartDate_fail() {
         commandBox.runCommand("add failEvent from: today to: yesterday");
         assertResultMessage(Messages.MESSAGE_INVALID_START_AND_END_DATE);
     }
     @Test
-    public void addTaskWithInvalidStartDate_fail() {
+    public void add_taskWithInvalidStartDate_fail() {
         commandBox.runCommand("add failEvent from: gg to: yesterday");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_START_DATE);
     }
     @Test
-    public void addTaskWithInvalidEndDate_fail() {
+    public void add_taskWithInvalidEndDate_fail() {
         commandBox.runCommand("add failEvent from: today to: gg");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_END_DATE);
     }
     @Test
-    public void addTaskWithInvalidTime_fail() {
+    public void add_taskWithInvalidTime_fail() {
         commandBox.runCommand("add failEvent @lol");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_DATE);
     }
     @Test
-    public void addTaskWithInvalidDate_fail() {
+    public void add_taskWithInvalidDate_fail() {
         commandBox.runCommand("add invalidDate by: lol");
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_DATE);
     }
     @Test
-    public void addDeadlineTaskWithDateNoTime_success() throws IllegalValueException {
+    public void add_deadlineTaskWithDateNoTime_success() throws IllegalValueException {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("add deadline by: 10 oct 1993 p/Low");
         TestTask deadlineTask = new TaskBuilder().withName("deadline")
@@ -86,7 +86,7 @@ public class AddCommandTest extends TypeTaskGuiTest {
         assertTrue(taskListPanel.isListMatching(expectedList));
     }
     @Test
-    public void addDeadlineTaskwithDateWithTime_success() throws IllegalValueException {
+    public void add_deadlineTaskwithDateWithTime_success() throws IllegalValueException {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("add deadline @ 10 oct 1993 4pm p/Low");
         TestTask deadlineTask = new TaskBuilder().withName("deadline")
@@ -96,7 +96,7 @@ public class AddCommandTest extends TypeTaskGuiTest {
         assertTrue(taskListPanel.isListMatching(expectedList));
     }
     @Test
-    public void addEventTask_success() throws IllegalValueException {
+    public void add_eventTask_success() throws IllegalValueException {
         TestTask[] currentList = td.getTypicalTasks();
         commandBox.runCommand("add event from: 10 oct 1993 1pm to: 10 oct 1993 4pm p/Low");
         TestTask deadlineTask = new TaskBuilder().withName("event")
@@ -129,7 +129,7 @@ public class EditCommandTest extends TypeTaskGuiTest {
     private TestTask[] expectedTasksList = td.getTypicalTasks();
 
     @Test
-    public void editAllFieldsSpecifiedSuccess() throws Exception {
+    public void edit_allFieldsSpecified_success() throws Exception {
         String detailsToEdit = "Bobby ";
         int typeTaskIndex = 1;
 
@@ -140,7 +140,7 @@ public class EditCommandTest extends TypeTaskGuiTest {
     }
 
     @Test
-    public void editNotAllFieldsSpecifiedUsingDateAndPriorityPrefix_success() throws Exception {
+    public void edit_notAllFieldsSpecifiedUsingDateAndPriorityPrefix_success() throws Exception {
         String detailsToEdit = "by:10/10/1993 p/High";
         int typeTaskIndex = 2;
 
@@ -151,7 +151,7 @@ public class EditCommandTest extends TypeTaskGuiTest {
         assertEditSuccess(typeTaskIndex, typeTaskIndex, detailsToEdit, editedTask);
     }
     @Test
-    public void editNotAllFieldsSpecifiedUsingPrefixForEvent_success() throws Exception {
+    public void edit_notAllFieldsSpecifiedUsingPrefixForEvent_success() throws Exception {
         String detailsToEdit = "from: 10 oct 1993 to: 12 oct 1993";
         int typeTaskIndex = 2;
 
@@ -163,47 +163,47 @@ public class EditCommandTest extends TypeTaskGuiTest {
         assertEditSuccess(typeTaskIndex, typeTaskIndex, detailsToEdit, editedTask);
     }
     @Test
-    public void editWithInvalidName_fail() {
+    public void edit_withInvalidName_fail() {
         commandBox.runCommand("edit 1 ^_^");
         assertResultMessage(Name.MESSAGE_NAME_CONSTRAINTS);
     }
     @Test
-    public void editFindThenEditInvalidSchedule_fail() {
+    public void findThenEdit_invalidSchedule_fail() {
         commandBox.runCommand("find George");
         String detailsToEdit = "edit 1 from: 12 Oct 1993 to: 10 Oct 1993";
         commandBox.runCommand(detailsToEdit);
         assertResultMessage(Messages.MESSAGE_INVALID_START_AND_END_DATE);
     }
     @Test
-    public void editFindThenEditStartDateToInvalidSchedule_fail() {
+    public void findThenEdit_startDateToInvalidSchedule_fail() {
         commandBox.runCommand("find George");
         String detailsToEdit = "edit 1 from: 12 Oct 1993";
         commandBox.runCommand(detailsToEdit);
         assertResultMessage(EditCommand.MESSAGE_INVALID_DATE);
     }
     @Test
-    public void editFindThenEditToInvalidDeadline_fail() {
+    public void findThenEdit_invalidDeadline_fail() {
         commandBox.runCommand("find George");
         String detailsToEdit = "edit 1 by: LOL";
         commandBox.runCommand(detailsToEdit);
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_DATE);
     }
     @Test
-    public void editFindThenEditToInvalidDeadlineWithTimePrefix_fail() {
+    public void findThenEdit_invalidDeadlineWithTimePrefix_fail() {
         commandBox.runCommand("find George");
         String detailsToEdit = "edit 1 @ LOL";
         commandBox.runCommand(detailsToEdit);
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_DATE);
     }
     @Test
-    public void editFindThenEditToInvalidStartDate_fail() {
+    public void findThenEdit_invalidStartDate_fail() {
         commandBox.runCommand("find George");
         String detailsToEdit = "edit 1 from: LOL";
         commandBox.runCommand(detailsToEdit);
         assertResultMessage(Messages.MESSAGE_INVALID_DATE_FORMAT_FOR_START_DATE);
     }
     @Test
-    public void editFindThenEditToInvalidEndDate_fail() {
+    public void findThenEdit_invalidEndDate_fail() {
         commandBox.runCommand("find George");
         String detailsToEdit = "edit 1 to: LOL";
         commandBox.runCommand(detailsToEdit);
@@ -211,7 +211,7 @@ public class EditCommandTest extends TypeTaskGuiTest {
     }
 
     @Test
-    public void editFindThenEditSuccess() throws Exception {
+    public void edit_findThenEdit_success() throws Exception {
         commandBox.runCommand("find Elle");
 
         String detailsToEdit = "Belle @Oct 10 1993";
@@ -227,19 +227,19 @@ public class EditCommandTest extends TypeTaskGuiTest {
     }
 
     @Test
-    public void editMissingTaskIndexFailure() {
+    public void edit_missingTaskIndex_fail() {
         commandBox.runCommand("edit Bobby");
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
     }
 
     @Test
-    public void editInvalidTaskIndexFailure() {
+    public void edit_invalidTaskIndex_fail() {
         commandBox.runCommand("edit 8 Bobby");
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
     }
 
     @Test
-    public void editNoFieldsSpecifiedFailure() {
+    public void edit_noFieldsSpecified_fail() {
         commandBox.runCommand("edit 1");
         assertResultMessage(EditCommand.MESSAGE_NOT_EDITED);
     }
@@ -271,7 +271,7 @@ public class EditCommandTest extends TypeTaskGuiTest {
 ###### \java\guitests\FindCommandTest.java
 ``` java
     @Test
-    public void findValidDate_success() {
+    public void find_validDate_success() {
         int expectedListSize = 1;
         commandBox.runCommand("find Oct 10 1993");
         assertListSize(expectedListSize);
@@ -335,13 +335,13 @@ public class RemoveDeadlineCommandTest extends TypeTaskGuiTest {
         assertRemovedeadlineSuccess(editIndex);
     }
     @Test
-    public void removedeadlineWithNoIndex_fail() {
+    public void removedeadline_withNoIndex_fail() {
         commandBox.runCommand(REMOVEDEADLINE_COMMAND_SHORT);
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT,
                 RemoveDeadlineCommand.MESSAGE_USAGE));
     }
     @Test
-    public void removedeadlineWithInvalidIndex_fail() {
+    public void removedeadline_withInvalidIndex_fail() {
         commandBox.runCommand(REMOVEDEADLINE_COMMAND_SHORT + " 500");
         assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
     }
@@ -507,35 +507,35 @@ public class DateParserTest {
     public void checkValidSchedule_success() {
         List<Date> startDate = DateParser.parse("today");
         List<Date> endDate = DateParser.parse("tmr");
-        assertTrue(DateParser.checkValidSchedule(startDate, endDate));
+        assertTrue(DateParser.isValidSchedule(startDate, endDate));
     }
     @Test
     public void checkValidSchedule_fail() {
         List<Date> startDate = DateParser.parse("tmr");
         List<Date> endDate = DateParser.parse("today");
-        assertFalse(DateParser.checkValidSchedule(startDate, endDate));
+        assertFalse(DateParser.isValidSchedule(startDate, endDate));
     }
     @Test
     public void checkValidDateFormat_success() {
         List<Date> validDate = DateParser.parse(dateTimeString);
-        assertTrue(DateParser.checkValidDateFormat(validDate));
+        assertTrue(DateParser.isValidDateFormat(validDate));
     }
     @Test
     public void checkValidDateFormat_fail() {
         List<Date> invalidDate = DateParser.parse("Not a date");
-        assertFalse(DateParser.checkValidDateFormat(invalidDate));
+        assertFalse(DateParser.isValidDateFormat(invalidDate));
     }
     @Test
     public void checkValidEventDate_success() {
         Date startDate = DateParser.parse("today").get(wantedDate);
         Date endDate = DateParser.parse("tmr").get(wantedDate);
-        assertTrue(DateParser.checkValidEventDate(startDate, endDate));
+        assertTrue(DateParser.isValidEventDate(startDate, endDate));
     }
     @Test
     public void checkValidEventDate_fail() {
         Date startDate = DateParser.parse("tmr").get(wantedDate);
         Date endDate = DateParser.parse("today").get(wantedDate);
-        assertFalse(DateParser.checkValidEventDate(startDate, endDate));
+        assertFalse(DateParser.isValidEventDate(startDate, endDate));
     }
 }
 ```
@@ -607,48 +607,4 @@ public class TaskTest {
         sampleTaskForTest.setIsCompleted(true);
         assertEquals(sampleTaskForTest, expectedTask);
     }
-    @Test
-    public void setPriority_success() throws IllegalValueException {
-        createSampleTask();
-        Task expectedTask = new Task(new Name("test"), new DueDate(""),
-                new DueDate(""), true, new Priority("High"));
-        sampleTaskForTest.setPriority(new Priority("High"));
-        assertEquals(sampleTaskForTest, expectedTask);
-    }
-    @Test
-    public void getName_success() throws IllegalValueException {
-        createSampleTask();
-        String expectedName = "test";
-        String testName = sampleTaskForTest.getName().toString();
-        assertEquals(testName, expectedName);
-    }
-    @Test
-    public void getDate_success() throws IllegalValueException {
-        createSampleTask();
-        String expectedDate = "";
-        String testDate = sampleTaskForTest.getDate().toString();
-        assertEquals(testDate, expectedDate);
-    }
-    @Test
-    public void getEndDate_success() throws IllegalValueException {
-        createSampleTask();
-        String expectedEndDate = "";
-        String testEndDate = sampleTaskForTest.getEndDate().toString();
-        assertEquals(testEndDate, expectedEndDate);
-    }
-    @Test
-    public void getIsCompleted_success() throws IllegalValueException {
-        createSampleTask();
-        boolean expectedIsCompleted = false;
-        boolean testIsCompleted = sampleTaskForTest.getIsCompleted();
-        assertEquals(testIsCompleted, expectedIsCompleted);
-    }
-    @Test
-    public void getPriority_success() throws IllegalValueException {
-        createSampleTask();
-        String expectedpriority = "Low";
-        String testPriority = sampleTaskForTest.getPriority().toString();
-        assertEquals(testPriority, expectedpriority);
-    }
-}
 ```
