--- a/collated/test/A0144902L.md
+++ b/collated/test/A0144902L.md
@@ -70,17 +70,14 @@ public class DoneCommandTest extends TypeTaskGuiTest {
 
     /*
      * EP: Check if successfully marked done a command after performing a find command,
-     * Should change task boolean isCompleted to true.
-     * Should return true.
      */
 
-//    @Test
-//    public void findThenDoneSuccess() throws Exception {
-//        TestTask[] currentList = td.getTypicalTasks();
-//        commandBox.runCommand("find Carl");
-//        commandBox.runCommand("done 1");
-//        assertTrue(currentList[1].getIsCompleted());
-//    }
+    @Test
+    public void findThenDoneSuccess() throws Exception {
+        commandBox.runCommand("find Carl");
+        commandBox.runCommand("done 1");
+        assertResultMessage(String.format(MESSAGE_COMPLETE_TASK_SUCCESS, "complete"));
+    }
 
 
     //---------------- End of test cases --------------------------------------
@@ -137,6 +134,35 @@ public class ListCommandTest extends TypeTaskGuiTest {
         assertResultMessage(String.format(MESSAGE_UNKNOWN_COMMAND, "Unknown"));
     }
 }
+```
+###### \java\typetask\model\task\TaskTest.java
+``` java
+    @Test
+    public void setPriority_success() throws IllegalValueException {
+        createSampleTask();
+        Task expectedTask = new Task(new Name("test"), new DueDate(""),
+                new DueDate(""), true, new Priority("High"));
+        sampleTaskForTest.setPriority(new Priority("High"));
+        assertEquals(sampleTaskForTest, expectedTask);
+    }
+```
+###### \java\typetask\model\task\TaskTest.java
+``` java
+    @Test
+    public void getPriority_success() throws IllegalValueException {
+        createSampleTask();
+        String expectedpriority = "Low";
+        String testPriority = sampleTaskForTest.getPriority().toString();
+        assertEquals(testPriority, expectedpriority);
+    }
+}
+```
+###### \java\typetask\testutil\TaskBuilder.java
+``` java
+    public TaskBuilder withPriority(String priority) throws IllegalValueException {
+        this.task.setPriority(new Priority(priority));
+        return this;
+    }
 ```
 ###### \java\typetask\testutil\TestTask.java
 ``` java
