--- a/collated/main/A0144902L.md
+++ b/collated/main/A0144902L.md
@@ -1,4 +1,8 @@
 # A0144902L
+###### \java\typetask\commons\core\Messages.java
+``` java
+    public static final String MESSAGE_TASK_NOT_FOUND = "%1$d task(s) listed!";
+```
 ###### \java\typetask\logic\commands\DoneCommand.java
 ``` java
 /**
@@ -13,14 +17,13 @@ public class DoneCommand extends Command {
             + "Parameters: INDEX (must be a positive integer)\n"
             + "Example: " + COMMAND_WORD + " 1";
 
-    public static final String MESSAGE_COMPLETE_TASK_SUCCESS = "Completed? Yes";
+    public static final String MESSAGE_COMPLETE_TASK_SUCCESS = "Task Completed!";
 
     public final int targetIndex;
 
     public DoneCommand(int targetIndex) {
         this.targetIndex = targetIndex;
     }
-
 
     @Override
     public CommandResult execute() throws CommandException {
@@ -38,7 +41,7 @@ public class DoneCommand extends Command {
             model.completeTask(targetIndex - 1, taskToComplete);
             //Need to do: Add the completed task to the completed task list
         } catch (TaskNotFoundException tnfe) {
-            assert false : "The target task cannot be missing";
+            throw new CommandException(Messages.MESSAGE_TASK_NOT_FOUND);
         }
 
         return new CommandResult(String.format(MESSAGE_COMPLETE_TASK_SUCCESS, taskToComplete));
@@ -64,8 +67,14 @@ public class ListPriorityCommand extends Command {
     }
 }
 ```
+###### \java\typetask\logic\parser\CliSyntax.java
+``` java
+    public static final Prefix PREFIX_PRIORITY = new Prefix("p/");
+```
 ###### \java\typetask\logic\parser\DoneCommandParser.java
 ``` java
+/**
+ * Parses input arguments and creates a new DoneCommand object
  */
 public class DoneCommandParser {
     /**
@@ -100,6 +109,18 @@ public class DoneCommandParser {
         case ListPriorityCommand.COMMAND_WORD:
             return new ListPriorityCommand();
 ```
+###### \java\typetask\logic\parser\ParserUtil.java
+``` java
+    /**
+     * Parses a {@code Optional<String> priority} into an {@code Optional<Priority>} if {@code priority} is present.
+     */
+    public static Optional<Priority> parsePriority(Optional<String> priority) throws IllegalValueException {
+        assert priority != null;
+        return priority.isPresent() ? Optional.of(new Priority(priority.get())) : Optional.empty();
+    }
+
+}
+```
 ###### \java\typetask\model\Model.java
 ``` java
     /** Marks a given task as completed*/
@@ -126,10 +147,12 @@ public class DoneCommandParser {
 ```
 ###### \java\typetask\model\ModelManager.java
 ``` java
+    /** Filters to find tasks that are completed */
     @Override
     public void updateFilteredTaskList(boolean showComplete) {
         updateFilteredTaskList(new PredicateExpression(new CompleteQualifier(showComplete)));
     }
+    /** Filters to find tasks that have high priority */
     @Override
     public void updateFilteredTaskList(Priority priority) {
         updateFilteredTaskList(new PredicateExpression(new PriorityQualifier(priority)));
@@ -168,7 +191,7 @@ public class DoneCommandParser {
 
         @Override
         public boolean run(ReadOnlyTask task) {
-            return (task.getPriority().value == "High");
+            return (task.getPriority().value.equals("High") && !task.getIsCompleted());
         }
 
         @Override
@@ -191,7 +214,7 @@ public class Priority {
 
     public static final String HIGH_PRIORITY = "High";
     public static final String LOW_PRIORITY = "Low";
-    public static final String PRIORITY_REGEX = "^(?:Yes|No|yes|YES|NO|no|y|n|Y|N|High|Low|h|l)$";
+    public static final String PRIORITY_REGEX = "^(?:Yes|No|yes|YES|NO|no|y|n|Y|N|High|Low|h|l|high|low)$";
     public final String value;
 
     /**
@@ -252,6 +275,26 @@ public class Priority {
 ```
 ###### \java\typetask\model\task\Task.java
 ``` java
+        this.isCompleted = isCompleted;
+        this.priority = priority;
+    }
+
+    /**
+     * Creates a copy of the given ReadOnlyTask.
+     */
+    public Task(ReadOnlyTask source) {
+       this(source.getName(), source.getDate(), source.getEndDate(),
+              source.getIsCompleted(), source.getPriority());
+    }
+
+    public void setName(Name name) {
+        assert name != null;
+        this.name = name;
+    }
+
+```
+###### \java\typetask\model\task\Task.java
+``` java
     public void setIsCompleted(boolean isCompleted) {
         this.isCompleted = isCompleted;
     }
@@ -296,6 +339,7 @@ public class Priority {
 ```
 ###### \java\typetask\model\task\TaskList.java
 ``` java
+    /**
      * Marks the equivalent task as completed.
      *
      * @throws taskNotFoundException if no such task could be found in the list.
@@ -321,65 +365,10 @@ public class Priority {
         }
         return -1;
     }
-
-    /**
-     * Removes the equivalent task from the list.
-     *
-     * @throws taskNotFoundException if no such task could be found in the list.
-     */
-    public boolean remove(ReadOnlyTask toRemove) throws TaskNotFoundException {
-        assert toRemove != null;
-        final boolean taskFoundAndDeleted = internalList.remove(toRemove);
-        if (!taskFoundAndDeleted) {
-            throw new TaskNotFoundException();
-        }
-        return taskFoundAndDeleted;
-    }
-
-    public void setTasks(TaskList replacement) {
-        this.internalList.setAll(replacement.internalList);
-    }
-
-    public void setTasks(List<? extends ReadOnlyTask> tasks) {
-        final TaskList replacement = new TaskList();
-        for (final ReadOnlyTask task : tasks) {
-            replacement.add(new Task(task));
-        }
-        setTasks(replacement);
-    }
-
-    public UnmodifiableObservableList<Task> asObservableList() {
-        return new UnmodifiableObservableList<>(internalList);
-    }
-
-    @Override
-    public Iterator<Task> iterator() {
-        return internalList.iterator();
-    }
-
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof TaskList // instanceof handles nulls
-                && this.internalList.equals(
-                ((TaskList) other).internalList));
-    }
-
-    @Override
-    public int hashCode() {
-        return internalList.hashCode();
-    }
-
-    /**
-     * Signals that an operation targeting a specified task in the list would fail because
-     * there is no such matching task in the list.
-     */
-    public static class TaskNotFoundException extends Exception {}
-
-}
 ```
 ###### \java\typetask\model\TaskManager.java
 ``` java
+    /**
      * Marks a task in TypeTask as complete.
      */
     public boolean completeTask(ReadOnlyTask target) throws TaskList.TaskNotFoundException {
@@ -393,33 +382,6 @@ public class Priority {
                 filtered(p -> !p.getIsCompleted()));
         return new UnmodifiableObservableList<>(incompleteList);
     }
-
-//// util methods
-
-    @Override
-    public String toString() {
-        return tasks.asObservableList().size() + " tasks, ";
-        // TODO: refine later
-    }
-
-    @Override
-    public ObservableList<ReadOnlyTask> getTaskList() {
-        return new UnmodifiableObservableList<>(tasks.asObservableList());
-    }
-
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof TaskManager // instanceof handles nulls
-                && this.tasks.equals(((TaskManager) other).tasks));
-    }
-
-    @Override
-    public int hashCode() {
-        // use this method for custom fields hashing instead of implementing your own
-        return Objects.hash(tasks);
-    }
-}
 ```
 ###### \java\typetask\storage\XmlAdaptedTask.java
 ``` java
@@ -427,12 +389,26 @@ public class Priority {
     private Boolean isCompleted;
     @XmlElement(required = true)
     private String priority;
-
-
-    /**
-     * Constructs an XmlAdaptedTask.
-     * This is the no-arg constructor that is required by JAXB.
-     */
-    public XmlAdaptedTask() {}
-
+```
+###### \java\typetask\storage\XmlAdaptedTask.java
+``` java
+        priority = source.getPriority().value;
+        if (source.getPriority() != null) {
+            priority = source.getPriority().value;
+        } else {
+            priority = "Low";
+        }
+        isCompleted = source.getIsCompleted();
+    }
+```
+###### \java\typetask\storage\XmlAdaptedTask.java
+``` java
+        final Priority priority = new Priority(this.priority);
+        boolean isCompleted = false;
+        if (this.isCompleted != null) {
+            isCompleted = this.isCompleted;
+        }
+        return new Task(name, date, endDate, isCompleted, priority);
+    }
+}
 ```
