--- a/collated/main/A0140063X.md
+++ b/collated/main/A0140063X.md
@@ -1,6 +1,9 @@
 # A0140063X
 ###### /java/seedu/task/commons/core/History.java
 ``` java
+/**
+ * Maintains undo/redo status and provide filepaths to support undo/redo.
+ */
 public class History {
 
     public static final int MAX_NUM_UNDO = 10;
@@ -568,7 +571,7 @@ public class RedoCommand extends Command {
 
         try {
             ReadOnlyTaskManager backupData = readTaskManager(history.getRedoFilePath());
-            model.loadData(backupData);
+            model.undoData(backupData);
         } catch (IOException io) {
             history.resetRedoCount();
             return new CommandResult(MESSAGE_FAIL_NOT_FOUND);
@@ -659,7 +662,7 @@ public class UndoCommand extends Command {
 
         try {
             ReadOnlyTaskManager backupData = readTaskManager(history.getUndoFilePath());
-            model.loadData(backupData);
+            model.undoData(backupData);
         } catch (IOException io) {
             history.resetUndoCount();
             return new CommandResult(MESSAGE_FAIL_NOT_FOUND);
@@ -697,6 +700,11 @@ public class UndoCommand extends Command {
 ```
 ###### /java/seedu/task/logic/util/LogicHelper.java
 ``` java
+/**
+ * This is a helper class that mainly converts task to/from events.
+ * Can be extended to have more helper methods.
+ *
+ */
 public class LogicHelper {
 
     /**
@@ -793,7 +801,7 @@ public class LogicHelper {
      * Load data into taskManager. Used by Undo/Redo Command.
      */
     @Override
-    public void loadData(ReadOnlyTaskManager newData) throws IllegalValueException {
+    public void undoData(ReadOnlyTaskManager newData) throws IllegalValueException {
         taskManager.resetData(newData);
         raise(new TaskManagerChangedEvent(taskManager, history.getBackupFilePath()));
     }
