--- a/collated/main/A0142939W.md
+++ b/collated/main/A0142939W.md
@@ -107,7 +107,7 @@ public class LoadCommand extends Command {
 
         try {
             ReadOnlyTaskManager newFile = readTaskManager(pathName);
-            model.loadData(newFile);
+            model.loadDataWithoutSaving(newFile);
         } catch (IOException | IllegalValueException e) {
             return new CommandResult(String.format(MESSAGE_WRONG_FORMAT, pathName));
         }
@@ -175,7 +175,6 @@ public class SaveCommand extends Command {
     @Override
     public void changeFilePath(String newPath) {
         indicateFilePathChanged(newPath);
-        indicateTaskManagerChanged("");
     }
 
 ```
